# geojson2vt

./: .gitignore  README.md  pyproject.toml
src/geojson2vt/: clip.py  convert.py  geojson2vt.py  simplify.py  tile.py  utils.py  vt2geojson.py  wrap.py
tests/: test_clip.py  test_full.py  test_get_tile.py  test_simplify.py  test_vt2geojson.py
